# imgv-cpp

./: .clang-tidy  .codespellrc  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.github/workflows/: ci.yml
cmake/: Findlibmpv.cmake  dev-mode.cmake  install-rules.cmake  variables.cmake
glad/: CMakeLists.txt  update.sh
glad/include/glad/: gl.h
glad/src/: gl.c
source/: animated_image_window.cpp  animated_image_window.hpp  clock.cpp  clock.hpp  context.cpp  context.hpp  events.cpp  events.hpp  gif.hpp  gif_window.cpp  gif_window.hpp  gl_window.cpp  gl_window.hpp  gl_wrapper.hpp  lib.cpp  main.cpp  mpv_window.cpp  mpv_window.hpp  root_window.cpp  root_window.hpp  static_image_window.cpp  static_image_window.hpp  stbi.hpp  stbi_window.cpp  stbi_window.hpp  texture_load_common.hpp  types.hpp  webp.hpp  window.cpp  window.hpp
stb/: CMakeLists.txt
test/: CMakeLists.txt
test/source/: imgv-cpp_test.cpp
